actualizacion de codigo

--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                         </span>
                     </div>
 
-                    <div class="bg-white bg-opacity-10 p-3 rounded text-light border border-white border-opacity-10">
-                        <p class="mb-0" style="font-size: 1.05rem; line-height: 1.6;">
-                            Cuento con amplia experiencia en la gestión y desarrollo de proyectos de TI, abarcando desde el
+					<div class="bg-white bg-opacity-10 p-3 rounded text-light border border-white border-opacity-10">
+						<p class="mb-0" style="font-size: 1.05rem; line-height: 1.6; text-align: justify;">
+							Cuento con amplia experiencia en la gestión y desarrollo de proyectos de TI, abarcando desde el
 							levantamiento de requerimientos hasta la entrega final. He desempeñado roles como Analista,
 							Programador, Administrador de Bases de Datos, Líder de Proyecto y Project Manager, gestionando tanto
 							incidentes como equipos de trabajo. Mi trayectoria abarca diversos sectores, incluyendo
@@ -255,9 +255,9 @@
 							adaptándome a las necesidades específicas de cada proyecto. Me enfoco en entregar soluciones de
 							alta calidad dentro de los plazos y presupuestos establecidos, fomentando un ambiente de trabajo
 							colaborativo y eficiente.
-                        </p>
-                    </div>
-                </div>
+						</p>
+					</div>
+
             </div>
 
             <!-- Botón Imprimir (visible solo en pantalla) -->
